--- a/data_analytics1.ipynb
+++ b/data_analytics1.ipynb
@@ -10567,6 +10567,15 @@
     "plt.title('Credit Utilization Ratio by Age (10-60, outliers removed)', fontsize=20)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# thank you"
+   ]
   }
  ],
  "metadata": {
